[tool.poetry]
name = "videoconverter"
version = "0.1.0"
description = ""
authors = ["Artin <58168246+artinalbert@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.2"
pyobjc-framework-cocoa = "^10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
